не стал делать листы. Сделал через два словаря Плательщиков(Payers) и Должников(Debtors)

--- a/CostSharing/CostSharing.csproj
+++ b/CostSharing/CostSharing.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Debtor.cs" />
+    <Compile Include="GeneralInfo.cs" />
+    <Compile Include="Payer.cs" />
     <Compile Include="PayGroup.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Product.cs" />
