сделал класс Экономика для статическим методов покупок и прочее. Пока так...

--- a/CostSharing/CostSharing.csproj
+++ b/CostSharing/CostSharing.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Debtor.cs" />
+    <Compile Include="Economy.cs" />
     <Compile Include="GeneralInfo.cs" />
     <Compile Include="Payer.cs" />
     <Compile Include="PayGroup.cs" />
