--- a/CostSharing/CostSharing.csproj
+++ b/CostSharing/CostSharing.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Person.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TravelLists.cs" />
+    <Compile Include="AllTrips.cs" />
     <Compile Include="Trip.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
